test/corpus/block.txt
================================================================================
Parse block_simple
================================================================================
{
    cmd
}
--------------------------------------------------------------------------------

(source_file
  (record_or_block
    (command
      (identifier))))

================================================================================
Parse block_multiple
================================================================================
{
    cmd1
    cmd2;
    cmd3
}
--------------------------------------------------------------------------------

(source_file
  (record_or_block
    (command
      (identifier))
    (command
      (identifier))
    (command
      (identifier))))

================================================================================
Parse block with args
================================================================================
each { |arg, arg2|
    cmd $arg $arg2
}
--------------------------------------------------------------------------------

(source_file
  (command
    (identifier)
    (record_or_block
      (block_args
        (identifier)
        (identifier))
      (command
        (identifier)
        (value_path
          (identifier))
        (value_path
          (identifier))))))
