test/corpus/bug.txt
================================================================================
Test bug1
================================================================================
build-string $fahren ' °F is ' $celcius ' °C'
--------------------------------------------------------------------------------

(source_file
  (command
    (identifier)
    (value_path
      (identifier))
    (string)
    (value_path
      (identifier))
    (string)))
