test/corpus/cmd.txt
================================================================================
Test cmd with hyphen
================================================================================
build-string
--------------------------------------------------------------------------------

(source_file
  (command
    (cmd_name)))

================================================================================
Test cmd with hyphen and arg
================================================================================
build-string $fahren
--------------------------------------------------------------------------------

(source_file
  (command
    (cmd_name)
    (value_path
      (identifier))))
