test/corpus/cmd_invocation.txt
================================================================================
Test simple cmd_invoc
================================================================================
(echo hi)
--------------------------------------------------------------------------------

(source_file
  (parenthesized_expr
    (command
      (identifier))
    (ERROR
      (command
        (identifier)))))
