test/corpus/env_export.txt
================================================================================
Test env_export_simple
================================================================================
export env BROWSER { "firefox" }
--------------------------------------------------------------------------------

(source_file
  (env_export
    (identifier)
    (record_or_block
      (string))))
