test/corpus/file_path.txt
================================================================================
Test fp_1
================================================================================
source get-weather.nu
--------------------------------------------------------------------------------

(source_file
  (command
    (identifier)
    (file_path)))

================================================================================
Test fp_2 file_path only ..
================================================================================
 ..

--------------------------------------------------------------------------------

(source_file
  (file_path))

================================================================================
Test fp_3 file_path only .
================================================================================
 .

--------------------------------------------------------------------------------

(source_file
  (file_path))
