test/corpus/pipe.txt
================================================================================
Parse pipe_simple
================================================================================
a | b
--------------------------------------------------------------------------------

(source_file
  (command
    (identifier))
  (command
    (identifier)))
