test/corpus/value_path.txt
================================================================================
Test value_path1
================================================================================
$a.b.c
--------------------------------------------------------------------------------

(source_file
  (value_path
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Test value_path_with_uppercase
================================================================================
$env.WALLPAPER_IMG
--------------------------------------------------------------------------------

(source_file
  (value_path
    (identifier)
    (identifier)))

================================================================================
Test vp in command
================================================================================
cmd $env.WALLPAPER_IMG
--------------------------------------------------------------------------------

(source_file
  (command
    (identifier)
    (value_path
      (identifier)
      (identifier))))

================================================================================
Test vp with array index
================================================================================
$var.0
--------------------------------------------------------------------------------

(source_file
  (value_path
    (identifier)
    (number_literal)))
